[tool.poetry]
name = "itc"
version = "0.1.0"
description = ""
authors = ["Quentin Fortier <qpfortier@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.6.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
yapf = "^0.32.0"
flake8 = "^4.0.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
